--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,44 @@ h6,
     opacity: 1;
 }
 
+/*** Service ***/
+.tech-item {
+    position: relative;
+    height: 600px;
+    padding: 0 30px;
+    transition: .5s;
+}
+
+.tech-item .service-icon {
+    margin-bottom: 30px;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primary);
+    border-radius: 2px;
+    transform: rotate(-45deg);
+}
+
+.tech-item .service-icon i {
+    transform: rotate(45deg);
+}
+
+.tech-item a.btn {
+    position: absolute;
+    width: 60px;
+    bottom: -48px;
+    left: 50%;
+    margin-left: -30px;
+    opacity: 0;
+}
+
+.tech-item:hover a.btn {
+    bottom: -24px;
+    opacity: 1;
+}
+
 
 /*** Testimonial ***/
 .testimonial-carousel .owl-dots {
